fix(table-row): selected border regression on safari

--- a/packages/forma-36-react-components/src/components/Table/Table.css
+++ b/packages/forma-36-react-components/src/components/Table/Table.css
@@ -3,6 +3,7 @@
 
 .Table {
   width: 100%;
+  border-collapse: collapse;
 }
 
 .Table--inline {
